# agentic-code-search-oss

./: .gitignore  .gitmodules  README.md  README_Training.md  README_verifiers.md  pyproject.toml  swe_grep_oss_env.py  test_bug_fixes.py
configs/rewards/: cosine_file_only.yaml  file_loc.yaml  scaled_f1.yaml  tool_use.yaml  tool_use_and_turn_cosine_file_only.yaml  weighted_f1.yaml
configs/skyrl-experiments/: README.md  no_think_multilevel_f1.yaml  no_think_weighted_f1.yaml  read-only.yaml  terminal.yaml  test.yaml  think_multilevel_f1.yaml  weighted_multilevel_f05.yaml
configs/swe-grep-oss/rl/: infer.toml  orch.toml  train.toml
scripts/: clone_repos.py  run_async_training.sh  run_prime_rl.sh  run_training.sh
src/: async_trainer.py  build_dataset.py  constants.py  train.py
src/agent/: agent.py
src/generator/: code_search_generator.py
src/metrics/: efficiency_metrics.py
src/prompts/: prompt_builder.py  system_prompt.py
src/prompts/templates/: default.j2  file_localization.j2  file_module.j2  file_module_custom_finish.j2  file_module_parallel_tools.j2  system_prompt.j2  system_prompt_custom_finish.j2
src/rewards/: __init__.py  cosine_rewards.py  format_reward.py  multiturn.py  scaled_f1.py  tool_use.py
src/rewards/file_localization/: file_localization.py  module_rewards.py
src/tools/: __init__.py  bash.py  example_custom_tool.py  localization_finish.py
tests/metrics/: test_efficiency_metrics.py
